# sliceable_ring_buffer

./: Cargo.toml  LICENSE-MIT  README.md  license-mit.md
benches/: compare_with_vecdeque.rs  insert.rs  push_front.rs
examples/: demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs
src/: bytes.rs  io.rs  lib.rs  mirrored.rs  serde.rs  stable.rs  tokio.rs
src/mirrored/: buffer.rs  darwin.rs  linux.rs  mod.rs  unix.rs  utils.rs  winapi.rs  windows.rs
