[package]
name = "slice-ring-buffer"
version = "0.3.4"
authors = ["OpenTritium <tritium404@hotmail.com>"]
description = "A double-ended queue that Deref's into a slice."
documentation = "https://docs.rs/crate/slice-ring-buffer/"
repository = "https://github.com/OpenTritium/slice_ring_buffer"
readme = "README.md"
keywords = ["collection", "deque", "ring", "circular", "buffer"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2024"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = { version = "0.5.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.175", default-features = false }


[dependencies]
num = { version = "0.4.3", default-features = false }
anyhow = { version = "1.0.99", default-features = false }
thiserror = { version = "2.0.16", default-features = false }


[features]
default = ["use_std"]
use_std = [
    "libc/use_std",
    "windows/std",
    "anyhow/std",
    "thiserror/std",
    "num/std",
]
