[package]
name = "sliceable-ring-buffer"
version = "0.3.4"
authors = ["OpenTritium <tritium404@hotmail.com>"]
description = "A double-ended queue that Deref's into a slice."
documentation = "https://docs.rs/crate/sliceable-ring-buffer/"
repository = "https://github.com/OpenTritium/slice_ring_buffer"
readme = "README.md"
keywords = ["collection", "deque", "ring", "circular", "buffer"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2024"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = { version = "0.5.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["mman", "feature", "fs"] }

[target.'cfg(all(target_family = "unix", not(any(target_os = "linux", target_os = "android"))))'.dependencies]
fastrand = "2.3.0"

[dependencies]
num = { version = "0.4.3" }
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.16" }
bytes = { version = "1.10.1", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
tokio = { version = "1.47.1", optional = true }


[dev-dependencies]
proptest = "1.8.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
criterion = "0.7.0"

[features]
default = ["io", "unstable"]
bytes = ["dep:bytes"]
tokio-io = ["dep:tokio"]
io = []
unstable = []


[[bench]]
name = "compare_with_vecdeque"
harness = false
