[package]
name = "slice-ring-buffer-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sliceable-ring-buffer]
path = ".."

[dependencies.arbitrary]
version = "1"
features = ["derive"]

[[bin]]
name = "fuzz"
path = "fuzz_targets/fuzz.rs"
test = false
doc = false
bench = false
